--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_STRAPI_URL = "https://pavlenkostrp-production.up.railway.app"
+UNISENDER_API_KEY="64fyw8wdojxwem4b48mzo74g63gqaoenbtxu4m5y"
+UNISENDER_LIST_ID='8'
