--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@reduxjs/toolkit": "^2.5.0",
     "corner-smoothing": "^0.1.5",
     "decline-word": "^1.4.0",
+    "form-data": "^4.0.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.13.0",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "next": "14.2.14",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
