--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ UNISENDER_API_KEY="64fyw8wdojxwem4b48mzo74g63gqaoenbtxu4m5y"
 UNISENDER_LIST_ID='8'
 EMAIL_USER='sincklar@gmail.com'
 EMAIL_PASS='sogh rfnk rtvn lylt'
-EMAIL_TO='pshishporonok@navirit.by'
+EMAIL_TO='jantig3@gmail.com'
