Add creds for form

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_STRAPI_URL = "https://pavlenkostrp-production.up.railway.app"
 UNISENDER_API_KEY="64fyw8wdojxwem4b48mzo74g63gqaoenbtxu4m5y"
 UNISENDER_LIST_ID='8'
-EMAIL_USER='sincklar@gmail.com'
-EMAIL_PASS='sogh rfnk rtvn lylt'
+EMAIL_USER='pavlenko-form@yandex.ru'
+EMAIL_PASS='btqgjcnkdcwqdtfe'
 EMAIL_TO='pshishporonok@navirit.by'
