Add fixes for scroll

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ UNISENDER_LIST_ID='8'
 EMAIL_USER='pavlenko-form@yandex.ru'
 EMAIL_PASS='btqgjcnkdcwqdtfe'
 EMAIL_TO='jantig3@gmail.com'
+NEXT_PUBLIC_PUBLIC_ID_PAYMENT="test_api_00000000000000000000002"
+NEXT_PUBLIC_ACCOUNT_ID_PAYMENT=""
