--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ UNISENDER_API_KEY="64fyw8wdojxwem4b48mzo74g63gqaoenbtxu4m5y"
 UNISENDER_LIST_ID='8'
 EMAIL_USER='pavlenko-form@yandex.ru'
 EMAIL_PASS='btqgjcnkdcwqdtfe'
-EMAIL_TO='admission@shkolapavlenko.ru'
+EMAIL_TO='jantig3@gmail.com'
 NEXT_PUBLIC_PUBLIC_ID_PAYMENT="pk_60a3457739f24e8dbaf8811f6669a"
 NEXT_PUBLIC_ACCOUNT_ID_PAYMENT=""
