Update project env

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_STRAPI_URL="https://pavlenkostrp-production.up.railway.app"
+NEXT_PUBLIC_STRAPI_URL="https://admin.shkolapavlenko.ru"
 UNISENDER_API_KEY="64fyw8wdojxwem4b48mzo74g63gqaoenbtxu4m5y"
 UNISENDER_LIST_ID='8'
 EMAIL_USER='pavlenko-form@yandex.ru'
-EMAIL_PASS='btqgjcnkdcwqdtfe'
-EMAIL_TO='jantig3@gmail.com'
-NEXT_PUBLIC_PUBLIC_ID_PAYMENT="pk_60a3457739f24e8dbaf8811f6669a"
+EMAIL_PASS='dhohgjoolyablwql'
+EMAIL_TO='admission@shkolapavlenko.ru'
+NEXT_PUBLIC_PUBLIC_ID_PAYMENT="pk_db06c47e45828d05146db15405a39"
 NEXT_PUBLIC_ACCOUNT_ID_PAYMENT=""
